objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Asset Protection</fullName>
        <description>Asset Protection</description>
        <isActive>true</isActive>
        <values>
            <fullName>Agreement Sent</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Dead Lead</fullName>
        </values>
        <values>
            <fullName>DocuSign Completed</fullName>
        </values>
        <values>
            <fullName>Event - No Consult</fullName>
        </values>
        <values>
            <fullName>Fulfillment%2FPartial Payment</fullName>
        </values>
        <values>
            <fullName>Long Term Stall</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 1</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 2</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 3</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 4</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Refund Requested</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Entrepreneur</fullName>
        <description>Entrepreneur</description>
        <isActive>true</isActive>
        <values>
            <fullName>Agreement Sent</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Event - No Consult</fullName>
        </values>
        <values>
            <fullName>Fulfillment%2FPartial Payment</fullName>
        </values>
        <values>
            <fullName>Long Term Stall</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 1</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 2</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 3</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 4</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Refund Requested</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Infinity Subscription</fullName>
        <description>Used for Infinity Memberships</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Declined-</fullName>
        </values>
        <values>
            <fullName>Fulfillment%2FPartial Payment</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Refund Requested</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewal</fullName>
        <description>Used for sales that are renewable.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Fulfillment%2FPartial Payment</fullName>
        </values>
        <values>
            <fullName>Long Term Stall</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 1</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 2</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 3</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 4</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Refund Requested</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Team</fullName>
        <description>Sales Team Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Agreement Sent</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Dead Lead</fullName>
        </values>
        <values>
            <fullName>Event - No Consult</fullName>
        </values>
        <values>
            <fullName>Fulfillment%2FPartial Payment</fullName>
        </values>
        <values>
            <fullName>Long Term Stall</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 1</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 2</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 3</fullName>
        </values>
        <values>
            <fullName>Pipeline Follow Up 4</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Refund Requested</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Subscription</fullName>
        <description>Used with recurring sales.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Canceled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Declined-</fullName>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Refund Requested</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AMS_create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By AutoMagic Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_update__c</fullName>
        <label>AutoMagic Sync Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Generate_Object__c</fullName>
        <description>Request to generate Estimate, invoice or sales order</description>
        <label>Generate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                    <default>true</default>
                    <label>Invoice</label>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>SalesOrder</fullName>
                </value>
                <value>
                    <fullName>SalesReceipt</fullName>
                </value>
                <value>
                    <fullName>Invoice Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVSFQB__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Product_Name__c</fullName>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DBSync</fullName>
                </value>
                <value>
                    <fullName>AppMashup (Salesforce.com &amp; QuickBooks)</fullName>
                </value>
                <value>
                    <fullName>AssessRight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_Error__c</fullName>
        <label>QB Error</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QuickBooks_ItemType__c</fullName>
        <label>QuickBooks ItemType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ItemService</fullName>
                </value>
                <value>
                    <fullName>ItemNonInventory</fullName>
                </value>
                <value>
                    <fullName>ItemOtherCharge</fullName>
                </value>
                <value>
                    <fullName>ItemInventory</fullName>
                </value>
                <value>
                    <fullName>ItemInventoryAssembly</fullName>
                </value>
                <value>
                    <fullName>ItemFixedAsset</fullName>
                </value>
                <value>
                    <fullName>ItemSubtotal</fullName>
                </value>
                <value>
                    <fullName>ItemDiscount</fullName>
                </value>
                <value>
                    <fullName>ItemPayment</fullName>
                </value>
                <value>
                    <fullName>ItemGroup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <description>QuickBooks Id</description>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_First_Name__c</fullName>
        <description>Used in Facebook Purchase Events - Integration with Zapier. Please do not delete.</description>
        <formula>Account.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Last_Name__c</fullName>
        <description>Used in Facebook Purchase Events - Integration with Zapier. Please do not delete.</description>
        <formula>Account.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <description>Used in Facebook Purchase Events - Integration with Zapier. Please do not delete.</description>
        <formula>IF(ISBLANK(Account.Phone), 
   IF(ISBLANK(Account.Phone_1__c),
      IF(ISBLANK(Account.Mobile_Number__c),&quot;&quot;,Account.Mobile_Number__c),

Account.Phone_1__c),
Account.Phone)</formula>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Advisor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Advisor checks this box when actively working an opportunity. Once the Advisor is no longer working the opportunity or it&apos;s moved to closed won/closed lost it&apos;s unchecked.</description>
        <inlineHelpText>Advisor checks this box when actively working an opportunity. Once the Advisor is no longer working the opportunity or it&apos;s moved to closed won/closed lost it&apos;s unchecked.</inlineHelpText>
        <label>Active Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Portal_Sale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Portal Sale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_Portal_Submission_By__c</fullName>
        <label>Admin Portal Submission By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Amount__c</fullName>
        <formula>Amount * Sale_Campaign__r.Affiliate_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Affiliate_Report_Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliate Report Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>All_Services_Check_Date__c</fullName>
        <inlineHelpText>When to check back on the agreement to see everything is completed</inlineHelpText>
        <label>All Services Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>All_Services_Complete__c</fullName>
        <inlineHelpText>All the services have been fulfilled or sent to dept</inlineHelpText>
        <label>All Services Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>All_Services_First_Update__c</fullName>
        <description>Date/Time when the All Services Status is changed.</description>
        <label>All Services First Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>All_Services_Status__c</fullName>
        <label>Sale Audited</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <isActive>false</isActive>
                    <label>On Hold</label>
                </value>
                <value>
                    <fullName>Step 1 - Supervisor</fullName>
                    <isActive>false</isActive>
                    <label>Step 1 - Supervisor</label>
                </value>
                <value>
                    <fullName>Step 2 - Manager</fullName>
                    <isActive>false</isActive>
                    <label>Step 2 - Manager</label>
                </value>
                <value>
                    <fullName>Step 3 - CEO</fullName>
                    <isActive>false</isActive>
                    <label>Step 3 - CEO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_List_Count__c</fullName>
        <label>Annual List Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Product_Entity_Type__c</field>
            <operation>equals</operation>
            <value>LIST00</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <label>Articles Received From State</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Articles_Prepared__c</fullName>
        <label>Articles Prepared</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Articles_Received_By_ALG__c</fullName>
        <label>Articles Received By ALG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Protection__c</fullName>
        <label>Asset Protection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Attachment_Name__c</fullName>
        <label>Attachment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Notes__c</fullName>
        <description>Notes from the person tracking the items from beginning to end of the client experience.</description>
        <label>Audit Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Automated_Order_ID__c</fullName>
        <description>Id From Events or Online</description>
        <label>Automated Order ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automated_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box for events and online orders to create Manual Transaction</description>
        <label>Automated Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automatic_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will run the renewal payment 16 days prior to the Renewal Effective Date.</inlineHelpText>
        <label>Automatic Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Company_Name__c</fullName>
        <label>Billing Company Name</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Company_Street__c</fullName>
        <label>Billing Company Street</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_FirstName__c</fullName>
        <label>Billing FirstName</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_LastName__c</fullName>
        <label>Billing LastName</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_PhoneNumber__c</fullName>
        <label>Billing PhoneNumber</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>210</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Status__c</fullName>
        <label>Billing Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blueprint_Created_in_Software__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blueprint Created in Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonus_Threshold__c</fullName>
        <formula>IF(
OR(
Sales_Rep__c = &apos;a0H4P00000PBGQd&apos;,
Sales_Rep__c = &apos;a0H4P00000eXfSh&apos;
),
TRUE,
FALSE)</formula>
        <label>Bonus Threshold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bookkeeping_Client__c</fullName>
        <description>Determines if a Client is considered a bookkeeping client to trigger relevant processes such as NPS</description>
        <inlineHelpText>Determines if a Client is considered a bookkeeping client to trigger relevant processes such as NPS</inlineHelpText>
        <label>Bookkeeping Client</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bookkeeping_Sale__c</fullName>
        <description>Determines if a Sales is considered a bookkeeping sale to trigger relevant Bookkeeping related processes</description>
        <inlineHelpText>Determines if a Sales is considered a bookkeeping sale to trigger relevant Bookkeeping related processes</inlineHelpText>
        <label>Bookkeeping Sale</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Location__c</fullName>
        <formula>Entity__r.Business_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows to setup a validation rule that can be bypassed by an automation when this field is checked. 
SCH-0009</description>
        <label>Bypass Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAP_Eligibility__c</fullName>
        <formula>IF(  AND(OR( ISPICKVAL( StageName , &apos;Closed Won&apos;), ISPICKVAL(StageName , &apos;Fulfillment/Partial Payment&apos;) ),OR( CONTAINS( Service_Item_List__c , &apos;A00395&apos;) ,CONTAINS( Service_Item_List__c , &apos;A00396&apos;)))  , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAP Eligibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampaignSale__c</fullName>
        <formula>Account.Campaign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignSale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Month__c</fullName>
        <label>Card Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Security__c</fullName>
        <label>Card Security</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Year__c</fullName>
        <label>Card Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Balance_Due__c</fullName>
        <formula>ChargentSFA__Total__c -  ChargentSFA__Transaction_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Account_Last_4__c</fullName>
        <label>Bank Account Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Account_Name__c</fullName>
        <inlineHelpText>Name on the Bank Account</inlineHelpText>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Account_Number__c</fullName>
        <inlineHelpText>Please enter the Bank Account number without spaces or dashes</inlineHelpText>
        <label>Bank Account Number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ChargentSFA__Payment_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Name__c</fullName>
        <inlineHelpText>Ex: &quot;Wells Fargo Bank&quot; or &quot;Bank of America&quot;</inlineHelpText>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Routing_Number__c</fullName>
        <inlineHelpText>Please enter the Bank Routing number (normally 9 digits) with no spaces or dashes</inlineHelpText>
        <label>Bank Routing Number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Address_Line_2__c</fullName>
        <label>Billing Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Company__c</fullName>
        <label>Billing Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Fax__c</fullName>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_First__c</fullName>
        <label>Billing First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Last__c</fullName>
        <label>Billing Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Postcode__c</fullName>
        <label>Deprecated (Billing Postcode)</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_State__c</fullName>
        <label>Billing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Zip__c</fullName>
        <label>Billing Zip/Postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__CPF_Number__c</fullName>
        <label>CPF Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Card_Last_4__c</fullName>
        <label>Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Card_Month_Indicator__c</fullName>
        <label>Card Expiration Month Indicator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Card_Month__c</fullName>
        <label>Card Expiration Month</label>
        <length>2</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Card_Name__c</fullName>
        <inlineHelpText>Name on the card to be charged - will default to Client First and Last</inlineHelpText>
        <label>Card Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Card_Number__c</fullName>
        <inlineHelpText>Please enter the complete credit card number without spaces or dashes</inlineHelpText>
        <label>Card Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Card_Type__c</fullName>
        <label>Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ChargentSFA__Payment_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>AMEX</fullName>
                </value>
                <value>
                    <fullName>MC Eurocard</fullName>
                </value>
                <value>
                    <fullName>UK Maestro</fullName>
                </value>
                <value>
                    <fullName>JCB Card</fullName>
                </value>
                <value>
                    <fullName>Solo</fullName>
                </value>
                <value>
                    <fullName>Electron</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Card_Year_Indicator__c</fullName>
        <label>Card Expiration Year Indicator</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Card_Year__c</fullName>
        <label>Card Expiration Year</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Charge_Amount__c</fullName>
        <inlineHelpText>The amount to be processed by the next transaction (authorize, charge or refund). If there are multiple charges, this field will automatically reflect the Amount of the order or opportunity minus the total amount of successful charges.</inlineHelpText>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>